--- a/assets/css/widgets-style.css
+++ b/assets/css/widgets-style.css
@@ -144,11 +144,12 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
     object-fit: cover;
     object-position: center center;
     transition: transform 0.4s ease;
+    z-index: 1;
 }
 
 .ewpda-ic-card__text {
